# TinyRenderer

./: CMakeLists.txt
src/: main.cpp
src/Core/: DrawLine.h  Geometry.h  Model.cpp  Model.h  tgaimage.h
